[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/StillCard.gd" type="Script" id=1]
[ext_resource path="res://themes/dancing_material.tres" type="Material" id=2]
[ext_resource path="res://sprites/BlackScreen.png" type="Texture" id=3]
[ext_resource path="res://scripts/BGImage.gd" type="Script" id=4]
[ext_resource path="res://themes/text.tres" type="Theme" id=5]

[sub_resource type="AtlasTexture" id=1]

flags = 0
region = Rect2( 0, 0, 2160, 760 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false

[node name="StillCard" type="Node"]

script = ExtResource( 1 )
dialog_text = [ "Mmmm.", "Mumble." ]

[node name="BGBackground" type="Container" parent="." index="0"]

material = ExtResource( 2 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Rect" ]

[node name="BGBlack" type="Sprite" parent="BGBackground" index="0"]

texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]

[node name="BGContainer" type="Container" parent="." index="1"]

material = ExtResource( 2 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Rect" ]

[node name="BGImage" type="Sprite" parent="BGContainer" index="0"]

material = ExtResource( 2 )
texture = SubResource( 1 )
vframes = 2
hframes = 6
script = ExtResource( 4 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]
bg_repeat = "once"

[node name="MarginContainer" type="MarginContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
_sections_unfolded = [ "Margin", "Rect", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 20.0
margin_right = 174.0
margin_bottom = 310.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/separation = 0
alignment = 0
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "custom_constants" ]

[node name="DialogBox" type="TextureRect" parent="MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 164.0
margin_bottom = 80.0
rect_min_size = Vector2( 160, 80 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0
_sections_unfolded = [ "Grow Direction", "Margin", "Rect" ]

[node name="DialogText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/DialogBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Rumble.
Earthquake?"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Rumble.
Earthquake?"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Grow Direction", "Margin", "Rect", "Size Flags", "Theme" ]

[node name="ShowTextDelay" type="Timer" parent="MarginContainer/VBoxContainer/DialogBox" index="1"]

process_mode = 1
wait_time = 0.02
one_shot = false
autostart = true

[node name="SecondSentenceDelay" type="Timer" parent="MarginContainer/VBoxContainer/DialogBox" index="2"]

process_mode = 1
wait_time = 0.4
one_shot = false
autostart = false

[node name="PlaceHolderMiddle" type="TextureRect" parent="MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 164.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 10 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 5
_sections_unfolded = [ "Margin", "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 90.0
margin_right = 164.0
margin_bottom = 130.0
rect_min_size = Vector2( 160, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "custom_constants" ]

[node name="ChoiceLeft" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" index="0"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 68.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin", "Rect", "Visibility" ]

[node name="LeftText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceLeft" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 68.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "left"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "left"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Margin", "Rect", "Theme", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="PlaceHolderBottle" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_right = 92.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 5
_sections_unfolded = [ "Margin", "Rect" ]

[node name="ChoiceRight" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_right = 164.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Visibility" ]

[node name="RightText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceRight" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 68.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "right"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "right"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Margin", "Rect", "Theme", "Visibility", "custom_constants", "custom_fonts", "custom_styles" ]
__meta__ = {
"_edit_lock_": true
}

[node name="TweenNode" type="Tween" parent="MarginContainer/VBoxContainer/HBoxContainer" index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[connection signal="timeout" from="MarginContainer/VBoxContainer/DialogBox/ShowTextDelay" to="." method="_on_ShowTextDelay_timeout"]

[connection signal="timeout" from="MarginContainer/VBoxContainer/DialogBox/SecondSentenceDelay" to="." method="_on_SecondSentenceDelay_timeout"]


